vistas de "servicio" y "municipalManager" v1.1

--- a/src/main/resources/templates/municipalManager/update.html
+++ b/src/main/resources/templates/municipalManager/update.html
@@ -3,7 +3,7 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar gestor/a municipal</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/municipalManager/add}"
+    <form action="#" th:action="@{/municipalManager/update}"
           th:object="${object}" method="post">
         <table>
             <tr>
