--- a/src/main/resources/templates/area/list.html
+++ b/src/main/resources/templates/area/list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/base}">
-<span layout:fragment="title" th:text="'Lista de areas de ' + ${requestData['municipality']}"></span>
+<span layout:fragment="title" th:text="'Lista de areas de ' + ${data[0]['municipality']}"></span>
 <main layout:fragment="content">
-    <p th:if="${#lists.isEmpty(objects)}">No hay ninguna area registrada</p>
-    <table th:unless="${#lists.isEmpty(objects)}" class="table table-striped">
+    <p th:if="${#lists.isEmpty(object)}">No hay ninguna area registrada</p>
+    <table th:unless="${#lists.isEmpty(object)}" class="table table-striped">
         <thead>
             <tr>
                 <th>Nombre</th>
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="object: ${objects}">
+            <tr th:each="object: ${object}">
                 <td th:text="*{object.name}"></td>
                 <td th:text="*{object.toSignString}"></td>
                 <td th:text="*{object.type.name}"></td>
