--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -20,6 +20,10 @@ main {
   flex: 1 0 auto;
 }
 
+img {
+    margin: 1em;
+}
+
 .btn {
     margin: 0.5em;
 }
@@ -42,7 +46,7 @@ form table {
     text-align: initial;
 }
 
-form td {
+form td:not(:first-child) {
     display: flex;
     margin-left: 1.5em;
     justify-content: space-between;
