--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -11,6 +11,7 @@
       <tr>
         <th><label for="password">Contraseña:</label></th>
         <td><input type="password" id="password" th:field="*{password}" /></td>
+        <td th:each="err : ${#fields.errors('password')}" th:text="${err}" ></td>
       </tr>
     </table>
     <input class="btn btn-success" type="submit" />
