--- a/src/main/resources/templates/controlStaff/update.html
+++ b/src/main/resources/templates/controlStaff/update.html
@@ -3,7 +3,7 @@
       layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Actualizar datos del ciudadano o de la ciudadana</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/citizen/update}"
+    <form action="#" th:action="@{/control-staff/update}"
           th:object="${object}" method="post">
         <table>
             <tr>
