--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Error durante la operacion</span>
+<span layout:fragment="title">Error durante la operación</span>
 <main layout:fragment="content" th:text="${message}"></main>
