--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -13,6 +13,6 @@
             <nav th:replace="fragments/nav"></nav>
         </header>
         <main layout:fragment="content"></main>
-        <footer class="navbar bg-light text-muted">EI1027 - Diseño y Implementacioon de Sistemas de la Información</footer>
+        <footer class="navbar bg-light text-muted">EI1027 - Diseño y Implementación de Sistemas de la Información</footer>
     </body>
 </html>
