--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Inicio</span>
-<main layout:fragment="content">Bienvenido al gestor de areas naturales</main>
+<main layout:fragment="content">Bienvenido al gestor de áreas naturales</main>
