--- a/src/main/resources/templates/areaPeriod/list.html
+++ b/src/main/resources/templates/areaPeriod/list.html
@@ -8,18 +8,28 @@
         <tr>
             <th>Fechas</th>
             <th>Horario</th>
-            <th><a href="add" class="btn btn-success" role="button">Añadir area</a></th>
+            <th th:if="session.user instanceof T(app.model.MunicipalManager)">
+                <a href="add" class="btn btn-success" role="button">Añadir horario</a>
+            </th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="object: ${object}">
             <td th:text="*{object.toScheduleString}"></td>
             <td th:text="*{object.toPeriodString}"></td>
-            <td>
-                <a th:href="@{/reservation/add/{id}(id=${object.id})}" class="btn btn-success" role="button">Reservar</a>
-                <a th:href="@{/control-staff/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver personal</a>
-                <a th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar</a>
-                <a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button">Eliminar</a>
+            <td th:if="session.user != null">
+                <a th:if="session.user instanceof T(app.model.Citizen)"
+                        th:href="@{/reservation/add/{id}(id=${object.id})}" class="btn btn-success" role="button">Reservar
+                </a>
+                <a th:if="session.user instanceof T(app.model.MunicipalManager)"
+                    th:href="@{/control-staff/list/{id}(id=${object.id})}" class="btn btn-success" role="button">Ver personal
+                </a>
+                <a th:if="session.user instanceof T(app.model.MunicipalManager)"
+                    th:href="@{update/{id}(id=${object.id})}" class="btn btn-warning" role="button">Actualizar
+                </a>
+                <a th:if="session.user instanceof T(app.model.MunicipalManager)"
+                    th:href="@{delete/{id}(id=${object.id})}" onclick="return confirm('¿Seguro que desea eliminar el horario?')" class="btn btn-danger" role="button">Eliminar
+                </a>
             </td>
         </tr>
         </tbody>
