--- a/src/main/resources/templates/controlStaff/add.html
+++ b/src/main/resources/templates/controlStaff/add.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{fragments/base}">
-<span layout:fragment="title">Actualizar datos del ciudadano o de la ciudadana</span>
+<span layout:fragment="title">Dar de alta personal de control</span>
 <main layout:fragment="content">
-    <form action="#" th:action="@{/citizen/update}"
+    <form action="#" th:action="@{/control-staff/add}"
           th:object="${object}" method="post">
         <table>
             <tr>
@@ -22,21 +22,9 @@
                 <th><label for="password">Contraseña</label></th>
                 <td><input type="text" id="password" th:field="*{password}"></td>
             </tr>
-            <tr>
-                <th><label for="country">País</label></th>
-                <td><input type="text" id="country" th:field="*{country}"></td>
-            </tr>
-            <tr>
-                <th><label for="city">Ciudad</label></th>
-                <td><input type="text" id="city" th:field="*{city}"></td>
-            </tr>
-            <tr>
-                <th><label for="address">Dirección</label></th>
-                <td><input type="text" id="address" th:field="*{address}"></td>
-            </tr>
         </table>
-        <input onclick="return confirm('¿Seguro que quiere actualizar los datosy los datos son correctos?')"
-               type="submit" value="Actualizar datos" class="btn btn-success"
+        <input onclick="return confirm('¿Seguro que quiere darle de alta y los datos son correctos?')"
+                type="submit" value="Dar de alta" class="btn btn-success"
         /></td>
     </form>
 </main>
