--- a/src/main/resources/templates/municipalManager/list.html
+++ b/src/main/resources/templates/municipalManager/list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{fragments/base}">
 <span layout:fragment="title">Lista de gestores y gestoras municipales</span>
 <main layout:fragment="content">
-    <p th:if="${#lists.isEmpty(objects)}">No hay ningún gestor municipal registrado</p>
+    <p th:if="${#lists.isEmpty(objects)} or not session.user instanceof T(app.model.EnviromentalManager)">No hay ningún gestor municipal registrado</p>
     <table th:unless="${#lists.isEmpty(objects)}" class="table table-striped">
         <thead>
             <tr>
@@ -14,7 +14,7 @@
                 <th>Municipio</th>
                 <th>Teléfono</th>
                 <th>Validez</th>
-                <th><a href="add" class="btn btn-success" role="button">Añadir gestor/a municipal</a></th>
+                <th><a href="add" class="btn btn-success" role="button">Dar de alta gestor/a municipal</a></th>
             </tr>
         </thead>
         <tbody>
@@ -26,7 +26,9 @@
                 <td th:text="*{object.municipality.name}"></td>
                 <td th:text="*{object.phone}"></td>
                 <td th:text="*{object.toSignString}"></td>
-                <td><a th:href="@{delete/{id}(id=${object.id})}" class="btn btn-danger" role="button" th:if="*{object.active}">Cancelar</a></td>
+                <td><a th:href="@{delete/{id}(id=${object.id})}"
+                       onclick="return confirm('¿Seguro que desea dar de baja al gestor municipal?')"
+                       class="btn btn-danger" role="button" th:if="*{object.active}">Dar de baja</a></td>
             </tr>
         </tbody>
     </table>
