--- a/src/main/resources/templates/reservation/add.html
+++ b/src/main/resources/templates/reservation/add.html
@@ -36,6 +36,8 @@
                 <td colspan="2"><div class="alert alert-danger" role="alert" th:text="${err}"></div></td>
             </tr>
         </table>
-        <input type="submit" value="Reservar" class="btn btn-success" />
+        <input
+                onclick="return confirm('¿Seguro que desea realizar la reserva y los datos son correctos?')"
+                type="submit" value="Reservar" class="btn btn-success" />
     </form>
 </main>
